FIXED ALIGNMENT OF THE ICONS ON SAFARI FINALLY

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -23,7 +23,7 @@
 
 .footericons {
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
   align-items: right;
 }
 
